# shootadoc-rust

./: Cargo.toml  README.md
src/: cli.rs  global_equalization.rs  imageops.rs  main.rs  math.rs  pixelops.rs
