[package]
name = "shootadoc-rust"
version = "0.1.0"
authors = ["Antti Kaihola <antti.kaihola@eniram.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
imageproc = "0.21.0"

[profile.release]
lto = true
